# WinDisplayManager

./: .gitignore  Cargo.toml  LICENSE  README.md  TRAY_IMPLEMENTATION.md  build.rs
.github/workflows/: pages.yml  rust.yml
docs/: _config.yml  index.md  privacy.md
docs/_includes/: footer.html  nav.html
docs/assets/css/: style.scss
docs/docs/: hotkeys.md  profiles.md
packaging/msix/: .gitignore  AppxManifest.xml  build-msix.ps1  generate-assets.ps1
src/: app.rs  ccd.rs  config.rs  ddc.rs  hotkeys.rs  main.rs  profiles.rs  tray.rs
