[package]
name = "windisplaymanager_rs"
version = "0.1.0"
edition = "2024"
description = "Windows Display Manager - DDC/CI monitor control with GUI"
license = "MIT"

[[bin]]
name = "windisplaymanager_rs"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[build-dependencies]
winres = "0.1"

[dependencies]
ddc = "0.2"
ddc-winapi = "0.2"
display-info = "0.4"
global-hotkey = "0.7"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
tray-icon = "0.21"
anyhow = "1"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = [
    "about",
    "multi-window",
    "tokio",
    "winit",
    "wgpu",
]
